<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900">


    <LinearLayout
        android:id="@+id/ll_register_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_et_fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
    >

        <TextView
            android:id="@+id/tvRegistrationHeader"
            style="@style/Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRegister"
            android:textColor="@color/text_main"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_et_fields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ll_register_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_btn"
        app:layout_constraintVertical_bias="0.5"
    >

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:hint="@string/etLogin_placeholder"
            style="@style/Body"
            android:textColor="@color/dark_gray_900"
            android:background="@drawable/et_shape"
            android:padding="14dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="14dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginHorizontal="70dp"
            android:hint="@string/etPassword_placeholder"
            style="@style/Body"
            android:textColor="@color/dark_gray_900"
            android:background="@drawable/et_shape"
            android:padding="14dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="14dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="invisible"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ll_et_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_bottomLinks"
        app:layout_constraintVertical_bias="0.7">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRegister"
            android:background="@drawable/btn_shape"
            style="@style/Body"
            android:textColor="@color/white"
            android:layout_marginHorizontal="79dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottomLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ll_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_haveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvHaveAnAccount"
            style="@style/Caption11"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLinkLogin"
            android:layout_marginStart="4dp"
            style="@style/Caption11"
            android:textColor="@color/primary"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
